Project

General

Profile

Actions

Bug #5164

closed

Line endings, bug/regression or feature of 1.9.3?

Bug #5164: Line endings, bug/regression or feature of 1.9.3?

Added by luislavena (Luis Lavena) about 15 years ago. Updated about 15 years ago.

Status:
Closed
Target version:
ruby -v:
-
Backport:
[ruby-core:38822]

Description

Hello,

Seems Redmine is down, so emailing the list.

One user detected that Ruby 1.9.3-preview1 and latest changes in
ruby_1_9_3 branch generates incorrectly line endings on Windows.

It seems that now, by default, it uses LF instead of CRLF for writing,
unless you explicitly indicate text-mode ('t')

Full investigation of the user is found here:

http://groups.google.com/group/rubyinstaller/msg/65cd1284e10ffe71

And simple test:

V:>ruby -ve "n

Updated by nobu (Nobuyoshi Nakada) about 15 years ago Actions #1 [ruby-core:38823]

  • Category set to core
  • Status changed from Open to Assigned
  • Assignee set to nobu (Nobuyoshi Nakada)
  • Priority changed from Normal to 5
  • Target version set to 1.9.3

Updated by luislavena (Luis Lavena) about 15 years ago Actions #2 [ruby-core:38996]

Hello Mr. Nakada, any word on this?

Thank you.

Updated by luislavena (Luis Lavena) about 15 years ago Actions #4 [ruby-core:39186]

Mr Nakada,

I can take care of this if time is an issue for you. I just need your approval/confirmation from you.

Please let us know so another 1.9.3 release goes out with this broken behavior.

Thank you.

Updated by kosaki (Motohiro KOSAKI) about 15 years ago Actions #5 [ruby-core:39189]

Mr Nakada,

I can take care of this if time is an issue for you. I just need your approval/confirmation from you.
Please let us know so another 1.9.3 release goes out with this broken behavior.

Nakada-san,

I think this issue should be fixed before 1.9.3 release. I hope 1.9.3
has no regression.

Updated by nobu (Nobuyoshi Nakada) about 15 years ago Actions #6

  • Status changed from Assigned to Closed
  • % Done changed from 0 to 100

This issue was solved with changeset r33165.
Luis, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.


  • io.c (validate_enc_binmode, prep_stdio): default to text mode on
    dosish platforms. [ruby-core:38822] [Bug #5164]
  • transcode.c (rb_econv_prepare_options): keep default ecflags
    unchanged if no options.

Updated by luislavena (Luis Lavena) about 15 years ago Actions #7 [ruby-core:39233]

Thank you Nakada-san, works perfectly!

Actions

Also available in: PDF Atom