* io.c (validate_enc_binmode, prep_stdio): default to text mode on   dosish platforms.  [ruby-core:38822] [Bug #5164] * transcode.c (rb_econv_prepare_options): keep default ecflags   unchanged if no options.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@33165 b2dd03c8-39d4-4d8f-98ff-823fe69b080e